Correcciones en los filtros de busqueda de producto y registros de productos. Implementación de stock inicial

--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaGestionProductos.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaGestionProductos.resx
@@ -133,6 +133,16 @@
         eLdvMsPNn5XGq97tm0JcKYxnfP7v8gMzZhelb9IgUAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="fieldTituloFiltroCategoria.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAPdJREFUOE/l
+        lDFKBEEQRScxMRMxEBYEj6AHMdDAE5T/ddEYmGruFUzURINNNNYDibCIgShGSsHMgO3OTiNm++HBMF39
+        mBqqu2mWO2a2KekeeKzkLue8UXr6pJSOgWfgvJIXSUelp3H3LUlXwKekk3J9KMAp8AFc5pwn/YKkQ+DN
+        3fd+7KhISukAeJe0379shU/xbGarwHYNURt7gNmgsP3ZXzWklB5Ghe6+Xn7JEFE7KoxEK+6+A+zOI9a6
+        dquEks7K9kqiplpoZivA2iKiZkz4p7EJ0a+xicEGrv9tsLu0R28GXFTyOvfodWkvh1tgWsnNwsthOfIN
+        5LwvLgMMEHEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="fieldTituloFiltroAlmacen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZ1JREFUOE/V
