--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaRegistroProductoP3.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaRegistroProductoP3.resx
@@ -131,19 +131,6 @@
         YII=
 </value>
   </data>
-  <data name="fieldTituloPrecios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAG4SURBVDhPxZS9rw1BGIfPJZGotT4KRHETQeOroRfdhkJ0dn/Pb5zi/AenEFEhiBCUElEQREEj
-        Er1Go0CCRiFyiXMT4iPvyazsGfec3NvwJFPsO+88M/Puu9vr/W9sbwAOA1V32N7X6/XmyvySuVgs6RRw
-        BrgFLALvgVfFWLR9pRT8oaqqNcBdYAF4AryQ9FMSZW6QTz0q42Oy7H6cxPYW2wa+SzrazQNOA8+AbZIO
-        AL+682MGg8Fa4BHwuq7rjVn2rZQFwOeQ2B4sKQyZ7cfAm5TSplmyIOLA1ZTSur+EK5WVTAg7srZmx6Nm
-        tk+UC6eR2+fThKxpmq2SDq1UVtf1ZuAtcCHMl4APKaX5mJT0VNLZctE0OrIH0R0hXLB9pE2w/RC4vZyu
-        j/JIehctNpYFwHPgWpsEbM+bXJwlXVIWpJR2A1+Ac63A9g7go+0bw+FwVVeU18xHmYCbVVWtLucjYVcI
-        gOutQNLOMpZzZ8taJO2Pzu9eNcdGks7Hc+ea9yauOY2mafbmn8Hl2B1IwA9JX4GXubZ3liVrAfbkK8V3
-        OgKO9fv99ZJORo/OelFTiW/T9sEQlXP/nN8foi9UZpDoUwAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="fieldPrecioCompraBase.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAOVJREFUKFN1
@@ -154,11 +141,30 @@
         YII=
 </value>
   </data>
-  <data name="fieldStockInicial.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldTituloPrecios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGdJREFUKFNj
-        YKAr0FBV/q+upjQHxtdUVZkLEkNVhQSGiYaPGqrKy2B8TTXlVSAxVFVIQENVabWGqvJnDTXlNHUVpUwN
-        VeVvIE3o6uBAW0FBQkNVZY2GqvInEFZXUV6hoaEhjK6OtgAALI4qfmoQVTsAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAbhJREFUOE/F
+        lL2vDUEYh88lkai1PgpEcRNB46uhF92GQnR2f89vnOL8B6cQUSGIEJQSURBEQSMSvUajQIJGIXKJcxPi
+        I+/JrOwZ95zc2/AkU+w77zwz8+672+v9b2xvAA4DVXfY3tfr9ebK/JK5WCzpFHAGuAUsAu+BV8VYtH2l
+        FPyhqqo1wF1gAXgCvJD0UxJlbpBPPSrjY7LsfpzE9hbbBr5LOtrNA04Dz4Btkg4Av7rzYwaDwVrgEfC6
+        ruuNWfatlAXA55DYHiwpDJntx8CblNKmWbIg4sDVlNK6v4QrlZVMCDuytmbHo2a2T5QLp5Hb59OErGma
+        rZIOrVRW1/Vm4C1wIcyXgA8ppfmYlPRU0tly0TQ6sgfRHSFcsH2kTbD9ELi9nK6P8kh6Fy02lgXAc+Ba
+        mwRsz5tcnCVdUhaklHYDX4BzrcD2DuCj7RvD4XBVV5TXzEeZgJtVVa0u5yNhVwiA661A0s4ylnNny1ok
+        7Y/O7141x0aSzsdz55r3Jq45jaZp9uafweXYHUjAD0lfgZe5tneWJWsB9uQrxXc6Ao71+/31kk5Gj856
+        UVOJb9P2wRCVc/+c3x+iL1RmkOhTAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldTituloNombreAlmacen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZ1JREFUOE/V
+        U71KXEEYXUgaW6uQCAl5EYVYa7W+wBLjnJkz7sw3KlhtG8k7xJewsIlNEiEp00RBRAQVG0ESoqCsfDO7
+        MntJgjb5OXDYM+ec+3Hv8G2r9d8jOjMjxCchviRvZ5v5ndHr9R6Kx2shrsqvWRPiWnW73X7Q7P8WYu3T
+        RHwW4jjQTA591UKcRJr3y849Hn3qF0g004k4FeJjCAtPmvkyOSHEtnaity+a+QiSt3NCeynE2xDCWDMf
+        QjNxdl270Zl2M8/odheeReJ79Ei1H0JnPATzvLAzXmeJdkmIb3pFtZ8RiVdCfK09cVgU4ocQ/UJ7Gb2J
+        Ix1iR7yZr72M5NETmq3aE+JQHMLwDRNtV4ij0Y7Z0mdrL+NnA/PFV3ekWr2683cGJuJl/lziQjzOo7dn
+        StXqRdqD5NC580AhzhLNStnJvJebheUstKvauc/AfnJuapjpXipvu85Naadkf2qgLrQQu7pTg717k3Um
+        PhQOzpppp+gd3dfmvJb+2ZPDhjjsCc2REPtZF+o+KstZM+0U/W4JeNSc9+/iBqQ/MlhWrBRuAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="fieldTituloStockInicial.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -169,6 +175,13 @@
         4EHSRUppKnqSjiS9Aud1Xc8A18DtSGjbttPAEIhgHw8jW/KqnPN8LEiq3X0NWC1tZjsf6nVJRCayJe8d
         6O7L5ewnxW4vYM55VtImsB2OOm7YzXsDzeygvFn0unlv4G/6B37W5APjb4En4BjYHcdmdgI8dj//RWa2
         Dwzi8cf0QNJeyZlsvQFY0xEAt4UWHAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="fieldStockInicial.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGdJREFUKFNj
+        YKAr0FBV/q+upjQHxtdUVZkLEkNVhQSGiYaPGqrKy2B8TTXlVSAxVFVIQENVabWGqvJnDTXlNHUVpUwN
+        VeVvIE3o6uBAW0FBQkNVZY2GqvInEFZXUV6hoaEhjK6OtgAALI4qfmoQVTsAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
